[project]
name = "imagex"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.1",
    "gunicorn>=23",
    "pydantic-settings>=2.5",
    "Pillow>=11",
    "pillow-heif>=0.16",
    "piexif>=1.1.3",
    "flask-log-request-id>=0.10.1",
    "concurrent-log-handler>=0.9.25",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
